# database-coursework

./: README.md  main.py  pyproject.toml
data/: db.json  test.json
dbmanager/: db_manager.py  db_postgres.sql
json_utils/: data_to_json.py
parser/: hh_parser.py
service/: abstract.py  base.py  validation.py
